--- a/index.html
+++ b/index.html
@@ -1213,11 +1213,11 @@
   </section>
 
 
- <!-- Seção Contato -->
+<!-- Seção Contato -->
 <section id="contact" class="section">
   <h2>Contato</h2>
   <p>Fale conosco e solicite seu orçamento sem compromisso.</p>
-  
+
   <form id="formulario-contato">
     <div class="form-group">
       <input type="text" id="nome" name="nome" required placeholder="Seu nome completo">
@@ -1267,29 +1267,6 @@
   </form>
 </section>
 
-
-    <div class="form-group">
-      <label>Urgência:</label><br>
-      <label><input type="radio" name="urgencia" value="Urgente" required> Urgente</label>
-      <label><input type="radio" name="urgencia" value="Normal"> Normal</label>
-    </div>
-
-    <div class="form-group">
-      <label>Preferência para contato:</label><br>
-      <label><input type="checkbox" name="contato" value="Telefone" checked> Telefone</label>
-      <label><input type="checkbox" name="contato" value="E-mail"> E-mail</label>
-      <label><input type="checkbox" name="contato" value="WhatsApp"> WhatsApp</label>
-    </div>
-
-    <div class="form-group">
-      <label for="mensagem">Mensagem adicional:</label>
-      <textarea id="mensagem" name="mensagem" rows="4" placeholder="Descreva detalhes ou dúvidas..." ></textarea>
-    </div>
-
-    <button type="submit" class="cta-btn">Enviar</button>
-  </form>
-</section>
-
 <!-- Rodapé -->
 <footer>
   <div class="footer-content">
@@ -1321,7 +1298,6 @@
   }, 4500);
 </script>
 
-
 <script>
   document.getElementById("formulario-contato").addEventListener("submit", function (e) {
     e.preventDefault();
@@ -1339,26 +1315,23 @@
     contatoElems.forEach(el => preferenciaContato.push(el.value));
     preferenciaContato = preferenciaContato.join(", ");
 
-    const body = `nome=${encodeURIComponent(nome)}&telefone=${encodeURIComponent(telefone)}&email=${encodeURIComponent(email)}&endereco=${encodeURIComponent(endereco)}&tipo-servico=${encodeURIComponent(tipoServico)}&urgencia=${encodeURIComponent(urgencia)}&preferencia-contato=${encodeURIComponent(preferenciaContato)}&mensagem=${encodeURIComponent(mensagem)}`;
+    const msg = `*Novo Orçamento pelo Site*%0A
+*Nome:* ${nome}%0A
+*Telefone:* ${telefone}%0A
+*Email:* ${email}%0A
+*Endereço:* ${endereco}%0A
+*Serviço:* ${tipoServico}%0A
+*Urgência:* ${urgencia}%0A
+*Preferência de contato:* ${preferenciaContato}%0A
+*Mensagem:* ${mensagem}`;
 
-    fetch("https://script.google.com/macros/s/AKfycbw1PvkXwnUAScCEedihh-r0CfYNGE3HRbp-tN7uD2D5Nb_5LzUlq_BLK5IDF-F5dtVHSA/exec", {
-      method: "POST",
-      mode: "no-cors",
-      headers: {
-        "Content-Type": "application/x-www-form-urlencoded"
-      },
-      body: body
-    }).then(() => {
-      alert("Mensagem enviada com sucesso!");
-      document.getElementById("formulario-contato").reset();
-    }).catch((error) => {
-      console.error("Erro ao enviar:", error);
-      alert("Houve um erro. Tente novamente.");
-    });
+    const numeroWhatsApp = "5562985558320"; // Número no formato internacional
+    const url = `https://wa.me/${numeroWhatsApp}?text=${msg}`;
+
+    window.open(url, "_blank");
   });
 </script>
 
-
 </body>
-
 </html>
+
