--- a/index.html
+++ b/index.html
@@ -594,12 +594,12 @@
                     
                     <div>
                         <h3 class="text-lg font-bold mb-4">Serviços</h3>
-                        <ul class="space-y-2">
-                            <li><a href="reforma.html" class="text-gray-400 hover:text-white">Reformas</a></li>
+                         <ul class="space-y-2">
+                            <li><a href="enconstrução.html" class="text-gray-400 hover:text-white">Reformas</a></li>
                             <li><a href="pintura" class="text-gray-400 hover:text-white">Pintura</a></li>
-                            <li><a href="eletrica.html" class="text-gray-400 hover:text-white">Elétrica</a></li>
-                            <li><a href="hidraulica.html" class="text-gray-400 hover:text-white">Hidráulica</a></li>
-                            <li><a href="emergencial.html" class="text-gray-400 hover:text-white">Emergências</a></li>
+                            <li><a href="enconstrução.html" class="text-gray-400 hover:text-white">Elétrica</a></li>
+                            <li><a href="enconstrução.html" class="text-gray-400 hover:text-white">Hidráulica</a></li>
+                            <li><a href="enconstrução.html" class="text-gray-400 hover:text-white">Emergências</a></li>
                         </ul>
                     </div>
                     
@@ -688,4 +688,5 @@
         });
     </script>
 </body>
+
 </html>
