--- a/enconstrução.html
+++ b/enconstrução.html
@@ -10,7 +10,7 @@
   <div class="text-center p-8 bg-white shadow-2xl rounded-xl">
     <h1 class="text-5xl font-bold text-yellow-500 mb-4">🚧 Em Construção 🚧</h1>
     <p class="text-gray-700 mb-6">Estamos trabalhando para trazer algo incrível! Volte em breve.</p>
-    <a href="/" class="inline-block bg-yellow-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600 transition">
+    <a href="index.html" class="inline-block bg-yellow-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600 transition">
       Voltar para a Página Inicial
     </a>
   </div>
